fixed issue with last sidebar heading not showing up

--- a/styles/main.less
+++ b/styles/main.less
@@ -87,7 +87,7 @@ aside {
         .li-H3 {
             padding-left: @indentWidth;
             font-size: 16px;
-            margin-bottom: 3px;
+            margin-bottom: 2px;
         }
 
         .li-H4 {
